--- a/.github/workflows/SkyHawk-SHRP.yml
+++ b/.github/workflows/SkyHawk-SHRP.yml
@@ -57,7 +57,7 @@ jobs:
     runs-on: ubuntu-20.04
     if: github.event.repository.owner.id == github.event.sender.id
     env:
-      GITHUB_TOKEN: ${{ 320269}}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     permissions:
       contents: write
     steps:
